--- a/Métodos_de_búsqueda_de_raíces_con_Python.ipynb
+++ b/Métodos_de_búsqueda_de_raíces_con_Python.ipynb
@@ -6,7 +6,6 @@
       "name": "Métodos de búsqueda de raíces con Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +54,7 @@
         "\n",
         "\n",
         "###<h1><center>CAPITULO 1: SOLUCIÓN NUMÉRICA DE ECUACIONES DE UNA VARIABLE</center></h1>\n",
-        "Encontrar las soluciones de f(x)=0. \n",
+        "Objetivo: Encontrar las soluciones de f(x)=0 usando métodos iterativos. \n",
         "\n",
         "Los métodos numéricos que se desarrollan en este capitulo son:\n",
         "\n",
