--- a/Métodos_de_búsqueda_de_raíces_con_Python.ipynb
+++ b/Métodos_de_búsqueda_de_raíces_con_Python.ipynb
@@ -6,6 +6,7 @@
       "name": "Métodos de búsqueda de raíces con Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,14 +50,20 @@
         "Marzo 2021\n",
         "\n",
         "\n",
-        "---\n",
-        "\n",
-        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DyIZgdLBDZ9a"
+      },
+      "source": [
         "\n",
         "###<h1><center>CAPITULO 1: SOLUCIÓN NUMÉRICA DE ECUACIONES DE UNA VARIABLE</center></h1>\n",
         "Objetivo: Encontrar las soluciones de f(x)=0 usando métodos iterativos. \n",
         "\n",
-        "Los métodos numéricos que se desarrollan en este capitulo son:\n",
+        "Los métodos numéricos que se desarrollan en este capítulo son:\n",
         "\n",
         "1. Método de bisección\n",
         "2. Método iterativo de punto fijo\n",
@@ -64,9 +71,7 @@
         "\n",
         "    3.1 Newton acelerado\n",
         "\n",
-        "    3.2 Newton modificado\n",
-        "\n",
-        "\n"
+        "    3.2 Newton modificado\n"
       ]
     },
     {
@@ -146,7 +151,7 @@
         "\n",
         "\n",
         "---\n",
-        "**1. Método de bisección**\n",
+        "####**1. Método de bisección**\n",
         "\n",
         "Este método se basa en el teorema del valor intermedio, el método consiste en dividir subintérvalos [ ai , bi ] a la mitad y luego localizar la mitad que contenga la raiz. El proceso se repite hasta cumplir los criterios de parada.\n",
         "\n"
@@ -470,7 +475,7 @@
         "\n",
         "---\n",
         "\n",
-        "2.**Método de punto fijo**\n",
+        "#### **2. Método de punto fijo**\n",
         "\n",
         "Un número p es un punto fijo para una función g si g(p)=p.\n",
         "\n",
@@ -628,7 +633,7 @@
         "\n",
         "---\n",
         "\n",
-        "**3. Método de Newton**\n",
+        "#### **3. Método de Newton**\n",
         "\n",
         "\n",
         "\n",
@@ -723,11 +728,11 @@
         "id": "BGXQs293GBR-"
       },
       "source": [
-        "**3.1 Método de Newton acelerado**\n",
+        "#####**3.1 Método de Newton acelerado**\n",
         "\n",
         "Es muy parecido al Newton normalito, pero nos permite encontrar raíces múltiples mas rápidamente, pero es necesario conocer la múltiplicidad m de la raiz. \n",
         "\n",
-        "m > 1 ( m es un número entero).\n",
+        "# m > 1 ( m es un número entero).\n",
         "\n",
         "Para acelerar el método solo debemos multiplicar el segundo elemento de la ecuación de iteración del Newton normalito por m."
       ]
@@ -855,7 +860,7 @@
         "id": "1FA2uOtFaBvg"
       },
       "source": [
-        "**3.2 Newton modificado**\n",
+        "##### **3.2 Newton modificado**\n",
         "\n",
         "Este método también es una aceleración del newton normalito pero acá necesitamos la segunda derivada y no necesitamos la múltiplicidad.\n",
         "Este método tambien es útil cuando tengo raices múltiples. Aunque la ecuación de convergencia se **modifica**."
@@ -949,7 +954,7 @@
         "id": "xAEHnF-UyJy4"
       },
       "source": [
-        "**1. Método de Jacobi**\n"
+        "####**1. Método de Jacobi**\n"
       ]
     },
     {
@@ -989,7 +994,7 @@
         "id": "nTx2LvXM6--D"
       },
       "source": [
-        "Método de Gauss-Seidel\n",
+        "#### **2. Método de Gauss-Seidel**\n",
         "\n",
         "El código es muy similar al de jacobi, solo debemos modificar la matriz de iteraciones y el vector asociado."
       ]
@@ -1031,7 +1036,7 @@
         "id": "HXOjhtaM9MOW"
       },
       "source": [
-        "**3. Método SOR**\n",
+        "#### **3. Método SOR**\n",
         "\n",
         "Para este método introducimos un parámetro  0 < w < 2. w busca reducir la norma del vector de iteración (k+1).\n",
         "\n",
@@ -1149,7 +1154,7 @@
         "id": "52nkfAapESBE"
       },
       "source": [
-        "**4. Método de Newton para sistemas no lineales**"
+        "#### **4. Método de Newton para sistemas no lineales**"
       ]
     },
     {
@@ -1235,15 +1240,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3CNY9HDqVrLO"
-      },
-      "source": [
-        ""
       ]
     }
   ]
